@@ -33,6 +33,7 @@ import java.io.IOException;
 import java.io.PrintWriter;
 import java.net.URI;
 import java.util.Arrays;
+import java.util.List;
 import java.util.function.Supplier;
 
 @Configuration
@@ -176,8 +177,8 @@ public class WebAppSecurityConfig {
         CorsConfiguration config = new CorsConfiguration();
         config.addAllowedHeader("*");
         config.setAllowedMethods(Arrays.asList("GET", "HEAD", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedOrigins(Arrays.asList("http://localhost", "http://localhost:4200", "http://localhost:8080", "https://spring-angular-csrf-frontend.onrender.com"));
-        //config.setAllowedOriginPatterns(List.of("*"));
+        //config.setAllowedOrigins(Arrays.asList("http://localhost", "http://localhost:4200", "http://localhost:8080", "https://spring-angular-csrf-frontend.onrender.com"));
+        config.setAllowedOriginPatterns(List.of(CorsConfiguration.ALL));
         config.setAllowCredentials(true); // This is important since we are using session cookies
         source.registerCorsConfiguration("/**", config);
         return source;
